--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "build": "npm run build",
     "start": "node ./main.js",
     "dev": "NODE_ENV=development PORT=5000 node ./main.js"
   },
